--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,5 @@
 <!-- start custom head snippets -->
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
-
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon.png">
 <!-- end custom head snippets -->
